@@ -14,6 +14,7 @@ version <next>:
 - Apple Pixlet decoder
 - QDMC audio decoder
 - NewTek SpeedHQ decoder
+- MIDI Sample Dump Standard demuxer
 
 version 3.2:
 - libopenmpt demuxer
